--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 #map-container {
-  width: 80%;
+  width: 100%;
   height: 600px;
   background-color: grey;
   position: relative;
@@ -20,13 +20,23 @@
   margin-top: 5px;
 }
 
-#list-menu {
-  width: 19%;
+.sidenav {
   display: block;
+  height: 100%;
   position: fixed;
+  width: 0;
+  transition: 0.5s;
+  z-index: 1;
+
+}
+
+.sidenav .list-menu {
+  display: block;
   margin-right: 2px;
-  border: 1px solid grey;
   border-radius: 5px 5px 5px 5px;
+  background-color: #199;
+  overflow: scroll;
+  top: 0%;
 }
 
 .location-list {
@@ -38,7 +48,7 @@ li {
   list-style-type: none;
   font-family: Arial;
   padding: 4px;
-  color: dark-grey;
+  color: black;
 }
 
 li:hover {
